Dark mode wallet colour fix

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -122,7 +122,7 @@
 }
 
 .dark-mode {
-  --swv-button-background-color: transparent !important;
+  --swv-button-background-color: black !important;
   --swv-button-outline-color: white !important;
   --swv-button-hover-background-color: #cbcbcb !important;
   // --swv-button-text-color: black !important;
